--- a/payroll/adminpage/css/report_yearwise.css
+++ b/payroll/adminpage/css/report_yearwise.css
@@ -1,3 +1,4 @@
+
 .selection_div {
     margin: 50px 10px 10px 10px;
     display: flex;
@@ -71,17 +72,21 @@ input[type="text"] {
 }
 
 .search-btn {
-    background-color: blue;
+    background-color: #5483B3;
     color: #fff;
-    padding: 5px 10px;
+    padding: 4px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-right: 10px;
+    margin: 1px;
+    font-size: smaller;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .search-btn:hover {
-    background-color: darkblue;
+    background-color: #6f9fce;
+    transition: all 0.3s ease-in-out;
+    /* Smooth animation */
 }
 
 /* Responsive styling */
@@ -133,17 +138,21 @@ table tr:hover {
 }
 
 .view-btn {
-    background-color: #007bff;
+    background-color: #5483B3;
     color: #fff;
-    padding: 5px 10px;
+    padding: 4px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 12px;
+    margin: 1px;
+    font-size: smaller;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .view-btn:hover {
-    background-color: #0056b3;
+    background-color: #6f9fce;
+    transition: all 0.3s ease-in-out;
+    /* Smooth animation */
 }
 
 .pagination {
@@ -241,16 +250,21 @@ table tr:hover {
 }
 
 .search-btn {
-    padding: 8px 16px;
+    background-color: #5483B3;
+    color: #fff;
+    padding: 4px 10px;
     border: none;
-    background-color: #007bff;
-    color: white;
-    border-radius: 4px;
+    border-radius: 5px;
     cursor: pointer;
+    margin: 1px;
+    font-size: smaller;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .search-btn:hover {
-    background-color: #0056b3;
+    background-color: #6f9fce;
+    transition: all 0.3s ease-in-out;
+    /* Smooth animation */
 }
 
 table {
@@ -352,19 +366,23 @@ td {
 }
 
 .stat {
-    flex: 1 1 45%; /* Flex grow, shrink, basis */
-    margin-bottom: 10px; /* Space between rows */
+    flex: 1 1 45%;
+    /* Flex grow, shrink, basis */
+    margin-bottom: 10px;
+    /* Space between rows */
     font-size: 16px;
 }
 
 .stat span {
-    display: block; /* Ensures the content is aligned properly */
+    display: block;
+    /* Ensures the content is aligned properly */
 }
 
 /* Optional: Adjust the layout for smaller screens */
 @media (max-width: 768px) {
     .stat {
-        flex: 1 1 100%; /* Stacks the items on smaller screens */
+        flex: 1 1 100%;
+        /* Stacks the items on smaller screens */
     }
 }
 
@@ -398,7 +416,8 @@ table tr:nth-child(even) {
     color: white;
     font-weight: bold;
 }
-.total-row:hover{
+
+.total-row:hover {
     background-color: black;
 }
 
