--- a/payroll/adminpage/css/report_yearwise.css
+++ b/payroll/adminpage/css/report_yearwise.css
@@ -1,4 +1,3 @@
-
 .selection_div {
     margin: 50px 10px 10px 10px;
     display: flex;
@@ -103,23 +102,22 @@ table {
     width: 100%;
     /* Ensures the table stretches to fit the container */
     border-collapse: collapse;
-    margin-top: 10px;
+    margin-top: 20px;
+    min-height: 250px;
     table-layout: fixed;
     /* Prevents uneven column widths */
 }
 
 table th,
 table td {
-    vertical-align: middle;
-    text-align: center;
+    min-height: 250px;
     border: 1px solid #ddd;
-    padding: 8px;
-    white-space: nowrap;
-    /* Prevents text wrapping */
+    padding: 10px;  
     overflow: hidden;
     /* Ensures overflow is hidden */
     text-overflow: ellipsis;
-    /* Adds ellipsis for overflowing text */
+    /* Shows ellipsis when text overflows */
+    font-size: 14px;
 }
 
 table th {
@@ -282,7 +280,7 @@ td {
 th,
 td {
     padding: 8px;
-    text-align: left;
+    
 }
 
 .modal-footer {
@@ -397,8 +395,8 @@ table th,
 table td {
     padding: 8px 12px;
     border: 1px solid #ddd;
-    text-align: center;
     font-size: 14px;
+    
 }
 
 table th {
