--- a/payroll/employee/css/dashboard.css
+++ b/payroll/employee/css/dashboard.css
@@ -19,7 +19,7 @@ body {
     padding: 20px;
   }
   
-  .section-header {
+  .head-title {
     font-size: 24px;
     font-weight: bold;
     margin-right: 1000px;
@@ -44,7 +44,7 @@ body {
   .card-blue {
     background-color: #7eb4eb;
     color: white;
-    margin-right: 50px;
+    margin-right: 35px;
   }
   
   .card h3 {
@@ -193,7 +193,7 @@ body {
     min-width: 600px;
     max-width: 100%;
     height: 280px;
-    margin-top: 25px;
+    margin-top: 50px;
   }
   
   .card-row {
