--- a/payroll/adminpage/css/report_payment.css
+++ b/payroll/adminpage/css/report_payment.css
@@ -411,14 +411,14 @@ td {
 .back-btn {
     padding: 8px 16px;
     border: none;
-    background-color: #dc3545;
+    background-color: black;
     color: white;
     border-radius: 4px;
     cursor: pointer;
 }
 
 .back-btn:hover {
-    background-color: #a71d2a;
+    background-color: #aaa;
 }
 
 .pagination {
