--- a/payroll/adminpage/css/report_yearwise.css
+++ b/payroll/adminpage/css/report_yearwise.css
@@ -108,33 +108,6 @@ table {
     /* Prevents uneven column widths */
 }
 
-table th,
-table td {
-    min-height: 250px;
-    border: 1px solid #ddd;
-    padding: 10px;
-    overflow: hidden;
-    /* Ensures overflow is hidden */
-    text-overflow: ellipsis;
-    /* Shows ellipsis when text overflows */
-    font-size: 14px;
-}
-
-table th {
-    background-color: #f8f8f8;
-    color: #333;
-    font-weight: bold;
-    font-size: 14px;
-}
-
-table tr:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-table tr:hover {
-    background-color: #f1f1f1;
-}
-
 .view-btn {
     background-color: #5483B3;
     color: #fff;
@@ -293,14 +266,14 @@ td {
 .back-btn {
     padding: 8px 16px;
     border: none;
-    background-color: #dc3545;
+    background-color: black;
     color: white;
     border-radius: 4px;
     cursor: pointer;
 }
 
 .back-btn:hover {
-    background-color: #a71d2a;
+    background-color: #aaa;
 }
 
 .pagination {
@@ -400,7 +373,7 @@ table td {
 }
 
 table th {
-    background-color: #f2f2f2;
+    background-color: #fff;
     font-weight: bold;
 }
 
