--- a/payroll/adminpage/css/dashboard.css
+++ b/payroll/adminpage/css/dashboard.css
@@ -78,8 +78,8 @@
 }
 
 .card {
-    background-color: #7eb4eb;
-    color: white;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
@@ -93,7 +93,7 @@
 
 /* Payroll Report Styles */
 .payroll-report {
-    background-color: #dadddf;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -107,7 +107,7 @@
 
 /* Salary Distribution Styles */
 .salary-distribution {
-    background-color: #dadddf;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -164,7 +164,7 @@
 }
 
 .event-item {
-  background-color: #e9e8e8; /* Light gray background */
+  background-color: #e0e0e0; /* Light gray background */
   border-top: 1px solid #e0e0e0;
   padding: 10px 12px;
   display: flex;
@@ -432,7 +432,7 @@
 
 /* Employee Distribution */
 .employee-distribution {
-    background-color: #dadddf;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -442,6 +442,7 @@
     justify-content: center;
     align-items: center;
     margin: 10px;
+    color: black;
 }
 
 /* Leave Requests Table */
