--- a/payroll/adminpage/css/dashboard.css
+++ b/payroll/adminpage/css/dashboard.css
@@ -164,7 +164,7 @@
 }
 
 .event-item {
-  background-color: #e0e0e0; /* Light gray background */
+  background-color: #f1f1f1; /* Light gray background */
   border-top: 1px solid #e0e0e0;
   padding: 10px 12px;
   display: flex;
