--- a/payroll/employee/css/main.css
+++ b/payroll/employee/css/main.css
@@ -13,7 +13,7 @@
  .main {
      flex-grow: 1;
      padding: 20px;
-     background-color: #f4f4f4;
+     background-color: #ffffff;
      margin-left: 200px;
      transition: margin-left 0.3s;
      margin-top: 30px;
@@ -58,7 +58,7 @@ h1 {
      margin: 30px 10px 10px 10px;
      padding: 20px 20px;
      border-radius: 5px;
-     box-shadow: 5px 5px 10px #888888;
+     box-shadow: 5px 5px 10px #a0a0a0;
  }
 
  #maindiv,
@@ -69,7 +69,7 @@ h1 {
      margin: 50px 10px 10px 10px;
      padding: 40px 20px;
      border-radius: 5px;
-     box-shadow: 5px 5px 10px #888888;
+     box-shadow: 5px 5px 10px #a0a0a0;
  }
 
  h1 {
