--- a/payroll/adminpage/css/report_yearwise.css
+++ b/payroll/adminpage/css/report_yearwise.css
@@ -10,13 +10,6 @@
     background-color: #fff;
 }
 
-/* Styling for the selection container */
-.selection_div {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
 .content {
     display: flex;
     flex-direction: column;
@@ -60,27 +53,15 @@
 .search-bar {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 4px;
 }
 
 input[type="text"] {
     padding: 2px;
     font-size: 16px;
-    margin-right: 80px;
     border-radius: 5px;
 }
 
-.search-btn {
-    background-color: #5483B3;
-    color: #fff;
-    padding: 4px 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 1px;
-    font-size: smaller;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-}
 
 .search-btn:hover {
     background-color: #6f9fce;
@@ -214,7 +195,7 @@ table {
 }
 
 .search-box {
-    width: 50%;
+    width: 300px;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
